--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "librankn <kkuroto@gmail.com>",
+  "license": "ISC",
+  "dependencies": {
+    "sum": "../sum"
+  },
+  "repository": "git@github.com:librankn/intro-curriculum-3004.git"
 }
